--- a/index.html
+++ b/index.html
@@ -4,21 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Current Weather</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-        <div>
+    <div class="main-container">
+        <div class="input-group">
             <input type="text" placeholder="Enter City Name" id="city_input">
             <button id="search_button">Get Weather</button>
         </div>
-
-        <div>
-            <h3 id="city_name">Delhi, India</h3>
-            <h6 id="city_time">Localtime</h6>
-            <p id="city_temp">35</p>
+        <div class="weather-card">
+            <h2 id="city_name">Entered City Name</h2>
+            <h4 id="city_time">Entered City Time</h4>
+            <p id="city_temp">Entered City Temperature</p>
         </div>
-
-
-        <script src="script.js"></script>
-
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
